Traducciones de ciudades, comunidad, y contacto

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,6 +1,9 @@
 {
     "page_title": "Blog - Backpackers Without Borders",
     "index_page_title": "Home - Backpackers Without Borders",
+    "page_title_contact": "Contact - Backpackers Without Borders",
+    "page_title_community": "Community - Backpackers Without Borders",
+    "page_title_cities": "Other corners - Backpackers Without Borders",
     "brand": "Backpackers Without Borders",
     "nav_home": "Home",
     "nav_routes": "Routes",
@@ -12,11 +15,28 @@
     "profile_friends": "My Friends",
     "profile_routes": "My Routes",
     "profile_logout": "Log out",
+    "profile_title": "My Profile",
+    "profile_photo_change": "Change photo",
+    "profile_name_label": "First name",
+    "profile_name_placeholder": "Your first name",
+    "profile_lastname_label": "Last name",
+    "profile_lastname_placeholder": "Your last name",
+    "profile_email_label": "Email",
+    "profile_email_placeholder": "your@email.com",
+    "profile_username_label": "Username",
+    "profile_username_placeholder": "Your username",
+    "profile_password_label": "Change password (optional)",
+    "profile_password_placeholder": "New password (leave blank to keep)",
+    "profile_edit_btn": "Edit",
+    "profile_save_btn": "Save changes",
+    "profile_cancel_btn": "Cancel",
+    "profile_close_btn": "Close",
     "blog_title": "Travelers Blog",
     "blog_subtitle": "Tips, stories and guides for your next backpacking adventure",
     "cities_title": "Other corners",
     "cities_subtitle": "View information about cities around the world",
     "cities_popular_destinations": "Cities around the world",
+    "cities_favorite_label": "Save",
     "btn_explore": "Explore",
     "featured_badge": "Featured",
     "featured_category": "Travel guides",
@@ -73,6 +93,8 @@
     "tag_tips": "Tips",
     "pagination_prev": "Previous",
     "pagination_next": "Next",
+    "footer_about_title": "About Us",
+    "footer_about": "Your community of travelers and adventurers. Discover the world with us.",
     "footer_desc": "Your community of travelers and adventurers. Discover the world with us.",
     "footer_quick_links": "Quick Links",
     "footer_link_routes": "Search Routes",
@@ -117,7 +139,96 @@
     "index_sidebar_event_barcelona": "Barcelona",
     "index_sidebar_event_date2": "December 25, 2025",
     "index_sidebar_event_valencia": "Valencia",
-    "index_sidebar_event_date3": "January 8, 2026"
+    "index_sidebar_event_date3": "January 8, 2026",
+    "contact_hero_title": "Contact Us",
+    "contact_hero_subtitle": "Questions, suggestions, or want to collaborate? We are here to help!",
+    "contact_form_title": "Contact Form",
+    "contact_form_subtitle": "Send us your message and we will get back to you as soon as possible",
+    "contact_form_name_label": "First name *",
+    "contact_form_name_placeholder": "Your first name",
+    "contact_form_email_label": "Email *",
+    "contact_form_email_placeholder": "your@email.com",
+    "contact_form_subject_label": "Subject *",
+    "contact_form_subject_placeholder": "Reason for your inquiry",
+    "contact_form_message_label": "Message *",
+    "contact_form_message_placeholder": "Type your message...",
+    "contact_form_cta": "Send message",
+    "contact_info_title": "Contact Information",
+    "contact_info_email_label": "Email:",
+    "contact_info_email_value": "support@backpackerswithoutborders.com",
+    "contact_info_phone_label": "Phone:",
+    "contact_info_phone_value": "+34 600 123 456",
+    "contact_info_office_label": "Office:",
+    "contact_info_office_value": "Madrid, Spain",
+    "community_hero_title": "Backpackers Community",
+    "community_hero_subtitle": "Share experiences, tips, and connect with other travelers",
+    "community_filters_title": "Filters",
+    "community_filter_recent": "Most recent",
+    "community_filter_popular": "Most popular",
+    "community_filter_replies": "Most replies",
+    "community_categories_title": "Categories",
+    "community_cat_all": "All",
+    "community_cat_travel": "Travel",
+    "community_cat_tips": "Tips",
+    "community_cat_destinations": "Destinations",
+    "community_cat_photos": "Photos",
+    "community_cat_questions": "Questions",
+    "community_info_title": "Info",
+    "community_info_text": "Join our traveler community. Share your stories and learn from other adventurers.",
+    "community_new_topic_title": "Create new topic",
+    "community_new_topic_label_title": "Topic title",
+    "community_new_topic_placeholder_title": "What is your question or comment?",
+    "community_new_topic_label_category": "Category",
+    "community_new_topic_option_default": "Select a category",
+    "community_new_topic_label_content": "Content",
+    "community_new_topic_placeholder_content": "Share your experience, question, or tip...",
+    "community_new_topic_publish": "Post topic",
+    "community_new_topic_reset": "Clear",
+    "community_topics_title": "Community topics",
+    "community_topics_total": "Total:",
+    "community_no_topics": "No topics in this category.",
+    "community_views_label": "{n} views",
+    "community_replies_label": "{n} replies",
+    "community_responses_title": "Replies",
+    "community_add_response_title": "Add a reply",
+    "community_reply_placeholder": "Share your reply...",
+    "community_reply_submit": "Post reply",
+    "community_reply_reset": "Clear",
+    "community_login_to_reply_title": "Log in to reply",
+    "community_login_to_reply_text": "You need to be logged in to post replies.",
+    "community_error_login_create": "You must log in to create a topic",
+    "community_error_required_fields": "Please fill in all fields",
+    "community_success_topic_created": "Topic created successfully!",
+    "community_error_login_reply": "You must log in to reply",
+    "community_error_empty_reply": "Reply cannot be empty",
+    "community_success_reply_posted": "Reply posted!",
+    "login_required_title": "Log in to participate",
+    "login_required_text": "You must be logged in to create topics and reply. Topics can be viewed by everyone.",
+    "my_routes_title": "My Routes",
+    "my_routes_desc": "Your created and saved routes will appear here.",
+    "my_routes_empty": "You do not have saved routes yet",
+    "time_seconds_ago": "A few seconds ago",
+    "time_minutes_ago": "{n} minute ago",
+    "time_minutes_ago_plural": "{n} minutes ago",
+    "time_hours_ago": "{n} hour ago",
+    "time_hours_ago_plural": "{n} hours ago",
+    "time_days_ago": "{n} day ago",
+    "time_days_ago_plural": "{n} days ago",
+    "friends_tab_friends": "Friends",
+    "friends_tab_add": "Add",
+    "friends_tab_online": "Online",
+    "friends_add_label": "Username",
+    "friends_add_placeholder": "e.g. User123",
+    "friends_add_button": "Add friend",
+    "friends_chat_header": "Select a friend to chat",
+    "friends_chat_placeholder": "Type a message...",
+    "friends_chat_send": "Send",
+    "friends_delete_msg": "Remove this friend?",
+    "friends_delete_confirm": "Yes, remove",
+    "friends_delete_cancel": "Cancel",
+    "logout_confirm_msg": "Are you sure you want to log out?",
+    "logout_confirm_btn": "Yes, log out",
+    "logout_cancel_btn": "Cancel"
     ,"btn_my_account": "My Account"
     ,"page_title_register": "Register - Backpackers Without Borders"
     ,"page_title_privacy": "Privacy Policy - Backpackers Without Borders"
