--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,6 +1,9 @@
 {
     "page_title": "Blog - Mochileros Sin Fronteras",
     "index_page_title": "Inicio - Mochileros Sin Fronteras",
+    "page_title_contact": "Contacto - Mochileros Sin Fronteras",
+    "page_title_community": "Comunidad - Mochileros Sin Fronteras",
+    "page_title_cities": "Otros rincones - Mochileros Sin Fronteras",
     "brand": "Mochileros Sin Fronteras",
     "nav_home": "Inicio",
     "nav_routes": "Rutas",
@@ -12,11 +15,28 @@
     "profile_friends": "Mis Amigos",
     "profile_routes": "Mis Rutas",
     "profile_logout": "Cerrar sesión",
+    "profile_title": "Mi Perfil",
+    "profile_photo_change": "Cambiar foto",
+    "profile_name_label": "Nombre",
+    "profile_name_placeholder": "Tu nombre",
+    "profile_lastname_label": "Apellido",
+    "profile_lastname_placeholder": "Tu apellido",
+    "profile_email_label": "Email",
+    "profile_email_placeholder": "tu@email.com",
+    "profile_username_label": "Nombre de Usuario",
+    "profile_username_placeholder": "Tu usuario",
+    "profile_password_label": "Cambiar contraseña (opcional)",
+    "profile_password_placeholder": "Nueva contraseña (dejar en blanco para no cambiar)",
+    "profile_edit_btn": "Editar",
+    "profile_save_btn": "Guardar cambios",
+    "profile_cancel_btn": "Cancelar",
+    "profile_close_btn": "Cerrar",
     "blog_title": "Blog de Viajeros",
     "blog_subtitle": "Consejos, historias y guías para tu próxima aventura mochilera",
     "cities_title": "Otros rincones",
     "cities_subtitle": "Visualiza información sobre las ciudades del mundo",
     "cities_popular_destinations": "Ciudades del mundo",
+    "cities_favorite_label": "Guardar",
     "btn_explore": "Explorar",
     "featured_badge": "Destacado",
     "featured_category": "Guías de viaje",
@@ -73,6 +93,8 @@
     "tag_tips": "Consejos",
     "pagination_prev": "Anterior",
     "pagination_next": "Siguiente",
+    "footer_about_title": "Sobre Nosotros",
+    "footer_about": "Tu comunidad de viajeros y aventureros. Descubre el mundo con nosotros.",
     "footer_desc": "Tu comunidad de viajeros y aventureros. Descubre el mundo con nosotros.",
     "footer_quick_links": "Enlaces Rápidos",
     "footer_link_routes": "Buscar Rutas",
@@ -117,7 +139,96 @@
     "index_sidebar_event_barcelona": "Barcelona",
     "index_sidebar_event_date2": "25 Diciembre 2025",
     "index_sidebar_event_valencia": "Valencia",
-    "index_sidebar_event_date3": "08 Enero 2026",        
+    "index_sidebar_event_date3": "08 Enero 2026",
+    "contact_hero_title": "Contacta con Nosotros",
+    "contact_hero_subtitle": "¿Tienes dudas, sugerencias o quieres colaborar? ¡Estamos aquí para ayudarte!",
+    "contact_form_title": "Formulario de Contacto",
+    "contact_form_subtitle": "Envíanos tu mensaje y te responderemos lo antes posible",
+    "contact_form_name_label": "Nombre *",
+    "contact_form_name_placeholder": "Tu nombre",
+    "contact_form_email_label": "Email *",
+    "contact_form_email_placeholder": "tu@email.com",
+    "contact_form_subject_label": "Asunto *",
+    "contact_form_subject_placeholder": "Motivo de tu consulta",
+    "contact_form_message_label": "Mensaje *",
+    "contact_form_message_placeholder": "Escribe tu mensaje...",
+    "contact_form_cta": "Enviar mensaje",
+    "contact_info_title": "Información de Contacto",
+    "contact_info_email_label": "Email:",
+    "contact_info_email_value": "soporte@mochilerossinfronteras.com",
+    "contact_info_phone_label": "Teléfono:",
+    "contact_info_phone_value": "+34 600 123 456",
+    "contact_info_office_label": "Oficina:",
+    "contact_info_office_value": "Madrid, España",
+    "community_hero_title": "Comunidad Mochileros",
+    "community_hero_subtitle": "Comparte tus experiencias, consejos y conecta con otros viajeros",
+    "community_filters_title": "Filtros",
+    "community_filter_recent": "Más recientes",
+    "community_filter_popular": "Más populares",
+    "community_filter_replies": "Más respuestas",
+    "community_categories_title": "Categorías",
+    "community_cat_all": "Todas",
+    "community_cat_travel": "Viajes",
+    "community_cat_tips": "Consejos",
+    "community_cat_destinations": "Destinos",
+    "community_cat_photos": "Fotos",
+    "community_cat_questions": "Preguntas",
+    "community_info_title": "Info",
+    "community_info_text": "Únete a nuestra comunidad de viajeros. Comparte tus historias y aprende de otros aventureros.",
+    "community_new_topic_title": "Crear nuevo tema",
+    "community_new_topic_label_title": "Título del tema",
+    "community_new_topic_placeholder_title": "¿Cuál es tu pregunta o comentario?",
+    "community_new_topic_label_category": "Categoría",
+    "community_new_topic_option_default": "Selecciona una categoría",
+    "community_new_topic_label_content": "Contenido",
+    "community_new_topic_placeholder_content": "Comparte tu experiencia, pregunta o consejo...",
+    "community_new_topic_publish": "Publicar tema",
+    "community_new_topic_reset": "Limpiar",
+    "community_topics_title": "Temas de la comunidad",
+    "community_topics_total": "Total:",
+    "community_no_topics": "No hay temas en esta categoría.",
+    "community_views_label": "{n} vistas",
+    "community_replies_label": "{n} respuestas",
+    "community_responses_title": "Respuestas",
+    "community_add_response_title": "Agregar una respuesta",
+    "community_reply_placeholder": "Comparte tu respuesta...",
+    "community_reply_submit": "Publicar respuesta",
+    "community_reply_reset": "Limpiar",
+    "community_login_to_reply_title": "Inicia sesión para responder",
+    "community_login_to_reply_text": "Necesitas estar logueado para publicar respuestas.",
+    "community_error_login_create": "Debes iniciar sesión para crear un tema",
+    "community_error_required_fields": "Por favor completa todos los campos",
+    "community_success_topic_created": "¡Tema creado exitosamente!",
+    "community_error_login_reply": "Debes iniciar sesión para responder",
+    "community_error_empty_reply": "La respuesta no puede estar vacía",
+    "community_success_reply_posted": "¡Respuesta publicada!",
+    "login_required_title": "Inicia sesión para participar",
+    "login_required_text": "Necesitas estar logueado para crear temas y responder mensajes. Los temas pueden ser vistos por todos.",
+    "my_routes_title": "Mis Rutas",
+    "my_routes_desc": "Aquí aparecerán las rutas que has creado y guardado.",
+    "my_routes_empty": "No tienes rutas guardadas aún",
+    "time_seconds_ago": "Hace unos segundos",
+    "time_minutes_ago": "Hace {n} minuto",
+    "time_minutes_ago_plural": "Hace {n} minutos",
+    "time_hours_ago": "Hace {n} hora",
+    "time_hours_ago_plural": "Hace {n} horas",
+    "time_days_ago": "Hace {n} día",
+    "time_days_ago_plural": "Hace {n} días",
+    "friends_tab_friends": "Amigos",
+    "friends_tab_add": "Añadir",
+    "friends_tab_online": "Online",
+    "friends_add_label": "Nombre de usuario (username)",
+    "friends_add_placeholder": "Ej. Usuario123",
+    "friends_add_button": "Añadir amigo",
+    "friends_chat_header": "Selecciona un amigo para chatear",
+    "friends_chat_placeholder": "Escribe un mensaje...",
+    "friends_chat_send": "Enviar",
+    "friends_delete_msg": "¿Eliminar a este amigo?",
+    "friends_delete_confirm": "Sí, eliminar",
+    "friends_delete_cancel": "Cancelar",
+    "logout_confirm_msg": "¿Estás seguro de que quieres cerrar sesión?",
+    "logout_confirm_btn": "Sí, cerrar sesión",
+    "logout_cancel_btn": "Cancelar",        
     "btn_my_account": "Mi Cuenta",
     "page_title_register": "Registro - Mochileros Sin Fronteras",
     "page_title_privacy": "Política de Privacidad - Mochileros Sin Fronteras",
@@ -129,6 +240,60 @@
     "nav_packs": "Packs",
     "footer_about": "Tu comunidad de viajeros y aventureros. Descubre el mundo con nosotros.",
     "footer_news_sub": "Recibe nuestras últimas novedades",
+    "search_hero_title": "Encuentra tu próxima aventura",
+    "search_hero_subtitle": "Descubre rutas y destinos increíbles para mochileros de todo el mundo",
+    "search_input_placeholder": "Buscar destino, país, tipo de ruta...",
+    "search_button": "Buscar",
+    "search_quick_label": "Populares:",
+    "search_quick_nepal": "Nepal",
+    "search_quick_machu": "Machu Picchu",
+    "search_quick_patagonia": "Patagonia",
+    "search_quick_iceland": "Islandia",
+    "filters_title": "Filtros",
+    "filters_clear": "Limpiar",
+    "filter_duration_title": "Duración",
+    "filter_duration": "1-3 días",
+    "filter_duration_4": "4 días",
+    "filter_duration_1w": "1 semana",
+    "filter_duration_10": "10 días",
+    "filter_duration_2w": "2 semanas",
+    "filter_duration_3w": "3+ semanas",
+    "filter_difficulty_title": "Dificultad",
+    "filter_diff_easy": "🟢 Fácil",
+    "filter_diff_moderate": "🟡 Moderado",
+    "filter_diff_hard": "🔴 Difícil",
+    "filter_budget_title": "Presupuesto total",
+    "filter_distance_title": "Distancia total",
+    "filter_distance_0_50": "0-50 km",
+    "filter_distance_50_200": "50-200 km",
+    "filter_distance_200_500": "200-500 km",
+    "filter_distance_500": "500+ km",
+    "filter_transport_title": "Tipo de transporte",
+    "filter_transport_walk": "🚶 A pie",
+    "filter_transport_bike": "🚴 Bicicleta",
+    "filter_transport_bus": "🚌 Bus",
+    "filter_transport_car": "🚗 Coche",
+    "filter_transport_train": "🚂 Tren",
+    "filter_transport_4x4": "🚙 4x4",
+    "filter_continent_title": "Continente",
+    "filter_continent_europe": "🌍 Europa",
+    "filter_continent_asia": "🌏 Asia",
+    "filter_continent_africa": "🌍 África",
+    "filter_continent_america": "🌎 América",
+    "filter_continent_oceania": "🌏 Oceanía",
+    "filter_features_title": "Características",
+    "filter_feature_localguide": "👨‍🏫 Guía local",
+    "filter_feature_transport": "🚌 Transporte incluido",
+    "filter_feature_hotel": "🏨 Hotel",
+    "filter_feature_hostel": "🏠 Hostel",
+    "filter_feature_camping": "⛺ Camping",
+    "results_found": "rutas encontradas",
+    "sort_label": "Ordenar por:",
+    "sort_relevance": "Más relevantes",
+    "sort_rating": "Mejor valoradas",
+    "sort_popularity": "Más populares",
+    "sort_price_asc": "Precio: Bajo a Alto",
+    "sort_price_desc": "Precio: Alto a Bajo",
     "auth_login": "Iniciar sesión",
     "auth_register": "Registrarse",
     "privacy_title": "Política de Privacidad",
