Traduccion bsuqueda de rutas

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -244,6 +244,70 @@
     "auth_register": "Registrarse",
     "privacy_title": "Política de Privacidad",
     "privacy_updated": "Última actualización: Enero 2025",
+    "search_title": "Encuentra tu próxima aventura",
+    "search_subtitle": "Descubre rutas y destinos increíbles para mochileros de todo el mundo",
+    "search_placeholder": "Buscar destino, país, tipo de ruta...",
+    "search_results_count": "Resultados",
+    "filters_title": "Filtros",
+    "filter_duration": "Duración",
+    "filter_duration_1_3_days": "1-3 días",
+    "filter_duration_4_days": "4 días",
+    "filter_duration_1_week": "1 semana",
+    "filter_duration_10_days": "10 días",
+    "filter_duration_2_weeks": "2 semanas",
+    "filter_duration_3_weeks": "3+ semanas",
+    "filter_difficulty": "Dificultad",
+    "filter_difficulty_easy": "🟢 Fácil",
+    "filter_difficulty_moderate": "🟡 Moderado",
+    "filter_difficulty_hard": "🔴 Difícil",
+    "filter_budget": "Presupuesto total",
+    "filter_budget_from": "€",
+    "filter_budget_max": "€3000+",
+    "filter_distance": "Distancia total",
+    "filter_distance_0_50": "0-50 km",
+    "filter_distance_50_200": "50-200 km",
+    "filter_distance_200_500": "200-500 km",
+    "filter_distance_500": "500+ km",
+    "filter_transport": "Tipo de transporte",
+    "filter_transport_walking": "🚶 A pie",
+    "filter_transport_bicycle": "🚴 Bicicleta",
+    "filter_transport_bus": "🚌 Bus",
+    "filter_transport_car": "🚗 Coche",
+    "filter_transport_train": "🚂 Tren",
+    "filter_transport_4x4": "🚙 4x4",
+    "filter_continent": "Continente",
+    "filter_continent_america": "América",
+    "filter_continent_europe": "Europa",
+    "filter_continent_asia": "Asia",
+    "filter_continent_africa": "África",
+    "filter_continent_oceania": "Oceanía",
+    "filter_features": "Características",
+    "filter_features_guide": "Guía local",
+    "filter_features_camping": "Camping",
+    "filter_clear": "Limpiar filtros",
+    "sort_label": "Ordenar por:",
+    "sort_relevance": "Relevancia",
+    "sort_price_asc": "Menor precio",
+    "sort_price_desc": "Mayor precio",
+    "sort_rating": "Mejor valoración",
+    "sort_popularity": "Más popular",
+    "quick_searches": "Búsquedas rápidas",
+    "route_card_from": "Desde",
+    "route_card_per_person": "/ persona",
+    "route_card_travelers": "viajeros",
+    "route_card_view_details": "Ver detalles",
+    "routes_not_found_title": "No se encontraron rutas",
+    "routes_not_found_subtitle": "Intenta ajustar los filtros o realizar una búsqueda diferente",
+    "difficulty_easy": "Fácil",
+    "difficulty_moderate": "Moderado",
+    "difficulty_hard": "Difícil",
+    "transport_walking": "A pie",
+    "transport_bicycle": "Bicicleta",
+    "transport_car": "Coche",
+    "transport_bus": "Bus",
+    "transport_train": "Tren",
+    "transport_4x4": "4x4",
+
     "continents": {
         "america": "América"
     },
