--- a/i18n/en.json
+++ b/i18n/en.json
@@ -245,6 +245,70 @@
     ,"privacy_title": "Privacy Policy"
     ,"privacy_updated": "Last updated: January 2025"
 ,
+    "search_title": "Find Your Next Adventure",
+    "search_subtitle": "Discover incredible routes and destinations for backpackers from all over the world",
+    "search_placeholder": "Search destination, country, route type...",
+    "search_results_count": "Results",
+    "filters_title": "Filters",
+    "filter_duration": "Duration",
+    "filter_duration_1_3_days": "1-3 days",
+    "filter_duration_4_days": "4 days",
+    "filter_duration_1_week": "1 week",
+    "filter_duration_10_days": "10 days",
+    "filter_duration_2_weeks": "2 weeks",
+    "filter_duration_3_weeks": "3+ weeks",
+    "filter_difficulty": "Difficulty",
+    "filter_difficulty_easy": "🟢 Easy",
+    "filter_difficulty_moderate": "🟡 Moderate",
+    "filter_difficulty_hard": "🔴 Hard",
+    "filter_budget": "Total budget",
+    "filter_budget_from": "€",
+    "filter_budget_max": "€3000+",
+    "filter_distance": "Total distance",
+    "filter_distance_0_50": "0-50 km",
+    "filter_distance_50_200": "50-200 km",
+    "filter_distance_200_500": "200-500 km",
+    "filter_distance_500": "500+ km",
+    "filter_transport": "Type of transport",
+    "filter_transport_walking": "🚶 Hiking",
+    "filter_transport_bicycle": "🚴 Bicycle",
+    "filter_transport_bus": "🚌 Bus",
+    "filter_transport_car": "🚗 Car",
+    "filter_transport_train": "🚂 Train",
+    "filter_transport_4x4": "🚙 4x4",
+    "filter_continent": "Continent",
+    "filter_continent_america": "America",
+    "filter_continent_europe": "Europe",
+    "filter_continent_asia": "Asia",
+    "filter_continent_africa": "Africa",
+    "filter_continent_oceania": "Oceania",
+    "filter_features": "Features",
+    "filter_features_guide": "Local guide",
+    "filter_features_camping": "Camping",
+    "filter_clear": "Clear filters",
+    "sort_label": "Sort by:",
+    "sort_relevance": "Relevance",
+    "sort_price_asc": "Lower price",
+    "sort_price_desc": "Higher price",
+    "sort_rating": "Better rating",
+    "sort_popularity": "Most popular",
+    "quick_searches": "Quick searches",
+    "route_card_from": "From",
+    "route_card_per_person": "/ person",
+    "route_card_travelers": "travelers",
+    "route_card_view_details": "View details",
+    "routes_not_found_title": "No routes found",
+    "routes_not_found_subtitle": "Try adjusting the filters or performing a different search",
+    "difficulty_easy": "Easy",
+    "difficulty_moderate": "Moderate",
+    "difficulty_hard": "Hard",
+    "transport_walking": "Hiking",
+    "transport_bicycle": "Bicycle",
+    "transport_car": "Car",
+    "transport_bus": "Bus",
+    "transport_train": "Train",
+    "transport_4x4": "4x4",
+
     "continents": {
         "america": "America"
     },
